kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-demo-deploy
  labels:
    app: stock-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stock-demo
  template:
    metadata:
      labels:
        app: stock-demo
    spec:
      containers:
        - name: stock-demo
          image: tdewin/stock-demo
          ports:
            - name: stock-demo
              containerPort: 8080
              protocol: TCP
          volumeMounts:
          - name: config
            mountPath: "/var/stockdb"
            readOnly: true
      volumes:
        - name: config
          configMap:
            name: stock-demo-configmap
