kubernetes/sec-nolb.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: stock-demo
  name: stock-demo-svc
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: stock-demo
  type: ClusterIP
