kubernetes/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: stock-demo
    service: gateway
  name: stock-demo-svc
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: stock-demo
  sessionAffinity: None
  type: LoadBalancer
