kubernetes/ingress-nginx-microk8s.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mysql-employees-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - foo'
spec:
  rules:
  - http:
      paths:
      - path: (/|$)(.*)
        pathType: Prefix
        backend:
          serviceName: mysql-employees-svc
          servicePort: 80
