kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: stock-demo-ingress
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: stock-demo-svc
            port:
              number: 80
        path: /stock(/|$)(.*)
        pathType: ImplementationSpecific
